--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
+    "antd": "^5.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
