--- a/package.json
+++ b/package.json
@@ -45,8 +45,14 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
+    "@types/react-router": "^5.1.19",
+    "@types/react-router-dom": "^5.3.3",
     "antd": "^5.0.2",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.5.0",
+    "sort-by": "^1.2.0"
   }
 }
